[ADD] exercises 3.1 to 3.6 completed

--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "The backend for the fullstack open course",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.jx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
+  }
 }
