--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
