--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@stylistic/eslint-plugin-js": "^2.3.0",
     "dotenv": "^16.4.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
